force-app/main/default/objects/Activity/fields/Canal_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Atendimento__c</fullName>
    <label>Canal de Atendimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>