force-app/main/default/objects/Activity/fields/EmpreendimentoInteresse__c.field-meta.xml
<CustomField>
    <fullName>EmpreendimentoInteresse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento de Interesse</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>