force-app/main/default/objects/Activity/fields/IdLead__c.field-meta.xml
<CustomField>
    <fullName>IdLead__c</fullName>
    <externalId>true</externalId>
    <label>Id do Lead</label>
    <length>18</length>
    <type>Text</type>
</CustomField>