force-app/main/default/objects/Activity/fields/Motivo_da_visita_n_o_realizada__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_visita_n_o_realizada__c</fullName>
    <label>Motivo da visita não realizada</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não está em momento de compra</fullName>
            </value>
            <value>
                <fullName>Fora da cidade</fullName>
            </value>
            <value>
                <fullName>Sem disponibilidade</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>