force-app/main/default/objects/Activity/fields/Origem_do_Lead__c.field-meta.xml
<CustomField>
    <fullName>Origem_do_Lead__c</fullName>
    <label>Origem do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>