force-app/main/default/objects/Activity/fields/Status_do_Compromisso__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Compromisso__c</fullName>
    <label>Status do Compromisso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendado</fullName>
            </value>
            <value>
                <fullName>Realizada com Sucesso</fullName>
            </value>
            <value>
                <fullName>Não Realizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>