force-app/main/default/objects/Activity/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>